--- a/style.css
+++ b/style.css
@@ -94,18 +94,22 @@ ul.menu > li:hover {
 }
 
 .new-window-icon a,
-.home-icon a {
+.new-window-icon a:hover,
+.home-icon a,
+.home-icon a:hover {
 	padding-right: 20px;
 	padding-left: 20px;
 	background-position: center;
 	background-repeat: no-repeat;
 }
 
-.new-window-icon a {
+.new-window-icon a,
+.new-window-icon a:hover {
 	background-image: url("./images/link_icon.png");
 }
 
-.home-icon a {
+.home-icon a,
+.home-icon a:hover {
 	background-image: url("./images/home_icon.png");
 }
 
